--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -17,18 +17,46 @@
 
 
 server {
-    listen 3001;
-    add_header Access-Control-Allow-Origin *;
-    index index.php index.html;
-    #root /var/www/app-front/build/public;
-    root /var/www/app-front/build;
 
-    location /static/js/ {
-       root /var/www/app-front/build;
-       rewrite ^/static/js(/.*)$ $1 last;
-       try_files $uri $args =404;
-      # try_files $uri $uri/ =404;
+    listen 3001 ssl http2;
+    listen [::]:3001 ssl http2;
+    server_name localhost front.local.com;
+
+    index index.php index.html;
+    server_tokens off;
+    ssl_certificate /etc/letsencrypt/ssl/localhost.crt;
+    ssl_certificate_key  /etc/letsencrypt/ssl/localhost.key;
+    ssl_buffer_size 8k;
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    ssl_ecdh_curve secp384r1;
+    ssl_session_tickets off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    location / {
+    #return 507;
+                proxy_set_header Host            $http_host;
+                proxy_set_header X-Forwarded-For $remote_addr;
+                proxy_pass http://node:3001$uri?$args;
     }
+    location /js/client.js {
+    proxy_pass http://node:3001/js/client.js ;
+    #return 507;
+     #   root /var/www/app-front/build;
+      #  try_files $uri $args =404;
+    }
+
+    #root /var/www/app-front/build/public;
+    #root /var/www/app-front/build;
+
+    #location /static/js/ {
+    #  root /var/www/app-front/build;
+    #   rewrite ^/static/js(/.*)$ $1 last;
+    #   try_files $uri $args =404;
+    #  # try_files $uri $uri/ =404;
+    #}
 
 
 }
@@ -120,22 +148,9 @@ server {
 
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-      ##  server_name dev-web.bitbooster.win local.dev-web.bitbooster.win;
-        server_name bixex.local.com;
-
-
-        
-        listen 3000 ssl http2;
-        listen [::]:3000 ssl http2;
-
-        
-
+       ## server_name bixex.local.com;
+        server_name front.local.com;
         try_files $uri @proxy;
-             
-
-        
-
-
 
         ## gzip
           # включаем сжатие
@@ -170,7 +185,7 @@ server {
         location / {
                 proxy_set_header Host            $http_host;
                 proxy_set_header X-Forwarded-For $remote_addr;
-                proxy_pass http://node-compile:3000$uri?$args;
+                proxy_pass http://node:3000$uri?$args;
         }
         location /ws {
                 proxy_pass http://node:3000;
@@ -192,10 +207,148 @@ server {
                 proxy_cache_bypass $http_upgrade;
             }
 
+}
+
+server {
+
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name api.local.com;
+       # root /var/www/app-back/public;
+
+        server_tokens off;
+        ssl_certificate /etc/letsencrypt/ssl/localhost.crt;
+        ssl_certificate_key  /etc/letsencrypt/ssl/localhost.key;
+        ssl_buffer_size 8k;
+        ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+        ssl_ecdh_curve secp384r1;
+        ssl_session_tickets off;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+       # resolver 8.8.8.8;
+
+           location / {
+         #  root /var/www/app-back/public;
+             autoindex on;
+             autoindex_exact_size off;
+               try_files $uri $uri/ /index.php?$query_string;
+               gzip_static on;
+           }
+       location ~ \.php$ {
+              # root /var/www/app-back/public;
+               #try_files $uri =404;
+               fastcgi_split_path_info ^(.+\.php)(/.+)$;
+               fastcgi_pass php-fpm:9000;
+               #fastcgi_pass apch:80;
+               fastcgi_index index.php;
+               include fastcgi_params;
+              # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+               fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
+               fastcgi_param PATH_INFO $fastcgi_path_info;
+           }
 
 
+
+
+     location /22 {
+           #root /var/www/app-back/public;
+           #index index.php
+
+           try_files $uri $uri/ /index.php?req=$1&$args;
+          proxy_set_header Host            $http_host;
+          proxy_set_header X-Forwarded-For $remote_addr;
+          proxy_pass http://apch$uri?$args;
+
+     }
+
+     location ~ \.ph22222p$ {
+          #return 570;
+          fastcgi_split_path_info ^(.+\.php)(/.*)$;
+       ##  fastcgi_pass   php-fpm:9000;
+          root /var/www/app-back/public;
+         fastcgi_pass   php-fpm:9000;
+
+
+         fastcgi_index   index.php;
+         include fastcgi_params;
+         fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+         fastcgi_param  PATH_INFO    $fastcgi_path_info;
+        #try_files $uri =404;
+        #root /var/www/app-back/public;
+        #fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #fastcgi_pass php-fpm:9000;
+        #fastcgi_index index.php;
+        #include fastcgi_params;
+        #fastcgi_param SCRIPT_FILENAME /var/www/app-back/public$fastcgi_script_name;
+       # fastcgi_param SCRIPT_FILENAME /var/www/app-back/public/index.php;
+        #fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+     location /555 {
+                     #fastcgi_split_path_info ^(.+\.php)(/.*)$;
+                      root /var/www/app-back/public;
+                      index index.php index.html;
+                      try_files $uri /index.php?$args;
+                     # fastcgi_pass   php-fpm:9000;
+                     # fastcgi_index   index.php;
+                     # include fastcgi_params;
+                     # fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+                      #fastcgi_param  PATH_INFO    $fastcgi_path_info;
+             #root /var/www/app-back/public;
+             #index index.php index.html;
+             #return 507;
+             #try_files $uri /index.php?$args;
+              #   proxy_pass http://php-fpm:9000;
+              #   proxy_set_header Host $host;
+              #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              #   proxy_set_header X-Real-IP $remote_addr;
+              #fastcgi_pass   php-fpm:9000;
+              #astcgi_index   index.php;
+              #include fastcgi_params;
+              #fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+              #astcgi_param  PATH_INFO    $fastcgi_path_info;
+        }
+
+            location ~ \.php22$ {
+                 fastcgi_split_path_info ^(.+\.php)(/.*)$;
+                 fastcgi_pass   php-fpm:9000;
+                 fastcgi_index   index.php;
+                 include fastcgi_params;
+                 fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+                 fastcgi_param  PATH_INFO    $fastcgi_path_info;
+
+            }
+
+        location ~ ^/api222222(/?)(.*)/?$ {
+       # return 507;
+            root /var/www/app-back/public;
+            try_files $uri $uri/ /index.php?req=$1&$args;
+        }
+
+     location /ap222222i2 {
+             # fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            ##  fastcgi_pass   php-fpm:9000;
+              fastcgi_pass   backend;
+              fastcgi_index   index.php;
+              include fastcgi_params;
+              fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+              fastcgi_param  PATH_INFO    $fastcgi_path_info;
+ #         index index.php index.html;
+ #         root /var/www/app-back;
+  #        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+   #       try_files $uri $uri/ /apiv1.php?$args;
+        }
 
 }
+
+
+
+   # location / {
+   #     try_files $uri /index.php?$args;
+   #}
+
 
 
 
