--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -48,6 +48,18 @@ server {
       #  try_files $uri $args =404;
     }
 
+            #sockets
+            location ~^/(ws|sockjs-node|socket.io) {
+                    proxy_pass http://node:3001;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host $host;
+                    proxy_cache_bypass $http_upgrade;
+            }
+
+
+
     #root /var/www/app-front/build/public;
     #root /var/www/app-front/build;
 
@@ -98,15 +110,6 @@ server {
    #       try_files $uri $uri/ /apiv1.php?$args;
         }
 
-   location /xxxxxxxx{
-        #proxy_pass http://node-compile:3000;
-        proxy_pass http://frontend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-   }
 
 
 
@@ -248,98 +251,6 @@ server {
                fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
                fastcgi_param PATH_INFO $fastcgi_path_info;
            }
-
-
-
-
-     location /22 {
-           #root /var/www/app-back/public;
-           #index index.php
-
-           try_files $uri $uri/ /index.php?req=$1&$args;
-          proxy_set_header Host            $http_host;
-          proxy_set_header X-Forwarded-For $remote_addr;
-          proxy_pass http://apch$uri?$args;
-
-     }
-
-     location ~ \.ph22222p$ {
-          #return 570;
-          fastcgi_split_path_info ^(.+\.php)(/.*)$;
-       ##  fastcgi_pass   php-fpm:9000;
-          root /var/www/app-back/public;
-         fastcgi_pass   php-fpm:9000;
-
-
-         fastcgi_index   index.php;
-         include fastcgi_params;
-         fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-         fastcgi_param  PATH_INFO    $fastcgi_path_info;
-        #try_files $uri =404;
-        #root /var/www/app-back/public;
-        #fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        #fastcgi_pass php-fpm:9000;
-        #fastcgi_index index.php;
-        #include fastcgi_params;
-        #fastcgi_param SCRIPT_FILENAME /var/www/app-back/public$fastcgi_script_name;
-       # fastcgi_param SCRIPT_FILENAME /var/www/app-back/public/index.php;
-        #fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-
-     location /555 {
-                     #fastcgi_split_path_info ^(.+\.php)(/.*)$;
-                      root /var/www/app-back/public;
-                      index index.php index.html;
-                      try_files $uri /index.php?$args;
-                     # fastcgi_pass   php-fpm:9000;
-                     # fastcgi_index   index.php;
-                     # include fastcgi_params;
-                     # fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-                      #fastcgi_param  PATH_INFO    $fastcgi_path_info;
-             #root /var/www/app-back/public;
-             #index index.php index.html;
-             #return 507;
-             #try_files $uri /index.php?$args;
-              #   proxy_pass http://php-fpm:9000;
-              #   proxy_set_header Host $host;
-              #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-              #   proxy_set_header X-Real-IP $remote_addr;
-              #fastcgi_pass   php-fpm:9000;
-              #astcgi_index   index.php;
-              #include fastcgi_params;
-              #fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-              #astcgi_param  PATH_INFO    $fastcgi_path_info;
-        }
-
-            location ~ \.php22$ {
-                 fastcgi_split_path_info ^(.+\.php)(/.*)$;
-                 fastcgi_pass   php-fpm:9000;
-                 fastcgi_index   index.php;
-                 include fastcgi_params;
-                 fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-                 fastcgi_param  PATH_INFO    $fastcgi_path_info;
-
-            }
-
-        location ~ ^/api222222(/?)(.*)/?$ {
-       # return 507;
-            root /var/www/app-back/public;
-            try_files $uri $uri/ /index.php?req=$1&$args;
-        }
-
-     location /ap222222i2 {
-             # fastcgi_split_path_info ^(.+\.php)(/.*)$;
-            ##  fastcgi_pass   php-fpm:9000;
-              fastcgi_pass   backend;
-              fastcgi_index   index.php;
-              include fastcgi_params;
-              fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-              fastcgi_param  PATH_INFO    $fastcgi_path_info;
- #         index index.php index.html;
- #         root /var/www/app-back;
-  #        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-   #       try_files $uri $uri/ /apiv1.php?$args;
-        }
 
 }
 
