--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -233,12 +233,18 @@ server {
        # resolver 8.8.8.8;
 
            location / {
-         #  root /var/www/app-back/public;
-             autoindex on;
-             autoindex_exact_size off;
+            # root /var/www/app-back/public;
+            # autoindex on;
+           #  autoindex_exact_size off;
                try_files $uri $uri/ /index.php?$query_string;
                gzip_static on;
            }
+            location ~*\.(js|jpg|png|css)$ {
+                    root /var/www/app-back/public;
+                    try_files $uri $uri/ /index.php?$query_string;
+                    gzip_static on;
+               }
+
        location ~ \.php$ {
               # root /var/www/app-back/public;
                #try_files $uri =404;
