--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -217,6 +217,7 @@ server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
         server_name api.local.com;
+        add_header Access-Control-Allow-Origin *;
        # root /var/www/app-back/public;
 
         server_tokens off;
