--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -217,7 +217,14 @@ server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
         server_name api.local.com;
-        add_header Access-Control-Allow-Origin *;
+     #   add_header Access-Control-Allow-Origin *;
+
+
+ #        add_header 'Access-Control-Allow-Origin' '*' always;
+  #       add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+   #      add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+    #     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+
        # root /var/www/app-back/public;
 
         server_tokens off;
@@ -234,9 +241,11 @@ server {
        # resolver 8.8.8.8;
 
            location / {
-            # root /var/www/app-back/public;
+            # root /var/www/app-back/public; some@gmail.com
             # autoindex on;
            #  autoindex_exact_size off;
+               #return 507;
+            #   add_header Access-Control-Allow-Origin *;
                try_files $uri $uri/ /index.php?$query_string;
                gzip_static on;
            }
@@ -249,6 +258,7 @@ server {
        location ~ \.php$ {
               # root /var/www/app-back/public;
                #try_files $uri =404;
+            #   add_header Access-Control-Allow-Origin *;
                fastcgi_split_path_info ^(.+\.php)(/.+)$;
                fastcgi_pass php-fpm:9000;
                #fastcgi_pass apch:80;
