--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -199,6 +199,16 @@ server {
                 proxy_cache_bypass $http_upgrade;
         }
 
+        location /sockjs-node {
+                proxy_pass http://node:3000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+        }
+
+
 
         location /socket.io {
                 #proxy_pass http://node:6001;
