--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -227,6 +227,7 @@ server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
         server_name api.local.com;
+        client_max_body_size 32m;
      #   add_header Access-Control-Allow-Origin *;
 
 
