--wip-- [skip ci]

--- a/docker/nginx-conf/default.conf
+++ b/docker/nginx-conf/default.conf
@@ -260,7 +260,7 @@ server {
                try_files $uri $uri/ /index.php?$query_string;
                gzip_static on;
            }
-            location ~*\.(js|jpg|png|css|svg)$ {
+            location ~*\.(js|jpg|png|css|svg)$ {5
                     root /var/www/app-back/public;
                     try_files $uri $uri/ /index.php?$query_string;
                     gzip_static on;
