--- a/docker/php-ini/php.ini
+++ b/docker/php-ini/php.ini
@@ -4,3 +4,5 @@ error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 display_errors=On
 max_execution_time=60
 upload_max_filesize=8M
+post_max_size=8M
+memory_limit=8M
