--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,6 +167,8 @@ services:
   mysql:
     image: mysql
 #    позволяет подлкючиться через свой mysql
+#    in the terminal- if ERROR 137 or 2013    SET GLOBAL connect_timeout = 10;
+#    command: --default-authentication-plugin=mysql_native_password
     command: --default-authentication-plugin=mysql_native_password --sort_buffer_size=512K
     volumes:
       - ./storage/docker/mysql:/var/lib/mysql
